refactor(symbols): Fix some code review